@@ -7,7 +7,7 @@
   "build-depends": [
   ],
   "depends": [
-    "IO::Socket::Async::SSL:ver<0.7.8>"
+    "IO::Socket::Async::SSL:ver<0.7.9>"
   ],
   "description": "Extendable Internet Relay Chat client",
   "license": "Artistic-2.0",
@@ -35,5 +35,5 @@
     "Test::When",
     "Test::Notice"
   ],
-  "version": "4.0.0"
+  "version": "4.0.1"
 }
