@@ -1,11 +1,10 @@
-#!perl6
-
-use lib 'lib';
 use Test;
+
+plan 4;
 
 use-ok 'IRC::Client';
 use-ok 'IRC::Client::Message';
 use-ok 'IRC::Client::Grammar';
 use-ok 'IRC::Client::Grammar::Actions';
 
-done-testing;
+# vim: expandtab shiftwidth=4
